# MockVendor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Releases.txt
include/MockVendor/: MockVendor.h
tests/: mockvendor_tests.cpp
tests/classes/: obj_a.h  obj_b.h  obj_c.h  obj_d.h  obj_e.h  obj_f.h  obj_g.h  obj_h.h
tests/mocks/: obj_a_mock.h  obj_b_mock.h  obj_c_mock.h  obj_d_mock.h  obj_e_mock.h  obj_f_mock.h  obj_g_mock.h  obj_h_mock.h
